--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gestionpaquetes-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",                  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node app.js"             
   },
   "keywords": [],
   "author": "",
